<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GolfrClient</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_couse_info_entry_screen">CouseInfoEntryScreen</string>
    <string name="title_activity_hole_info_entry_screen">HoleInfoEntryScreen</string>
    <string name="title_activity_now_playing_course_screen">NowPlayingCourseScreen</string>
    <string name="title_activity_hole_selection_screen">HoleSelectionScreen</string>
    <string name="title_activity_user_history_screen">UserHistoryScreen</string>
    <string name="title_activity_course_list_screen">CourseListScreen</string>
    <string name="title_activity_main_menu_screen">MainMenuScreen</string>
    <string name="title_activity_score_entry_screen">ScoreEntryScreen</string>
    <string name="ScoreEntryScreen_HoleString">Hole#</string>
    <string name="ScoreEntryScreen_ParString">Par</string>
    <string name="ScoreEntryScreen_RedYardString">Red Yardage</string>
    <string name="ScoreEntryString_WhiteYard">White Yardage</string>
    <string name="ScoreEntryScreen_BlueYardString">Blue Yardage</string>
    <string name="ScoreEntryScreen_MensHanicapString">Men\'s Handicap</string>
    <string name="ScoreEntryScreen_WomensHandicapString">Women\'s Handicap</string>
    <string name="title_activity_score_card_screen">ScoreCardScreen</string>

</resources>
